--- a/src/app/casino-tournament/casino-tournament.component.html
+++ b/src/app/casino-tournament/casino-tournament.component.html
@@ -1,1 +1,53 @@
-<app-header2></app-header2><section class="container13"> <div class="index5-maindiv"> <div class="index5-left-text"> <h1 class="param_1" >The <b class="chck">Casino Tournaments</b> allow you to create a tournament with a starting and ending date.</h1> <p style="font-weight: 300; padding: 24px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif;">A powerful tool at your disposal for boosting casino section revenues is the implementation of <strong>Casino Tournaments.</strong></p> <h2 style="font-weight: 200; padding: 15px 0px; color: rgb(87,87,86); font-size: 24px; font-family: 'Raleway', sans-serif;">You'll have the ability to fully <strong>customize each tournament</strong> by handpicking the list of slots that will participate in the competition.</h2> <p style="font-weight: 300; padding: 15px 0px; color: rgb(87,87,86); letter-spacing: 0em; line-height: 1.8;">To <strong>create a promotion</strong>, you simply need to select a <strong>title</strong> for the <strong>tournament</strong>, designate the <strong>slots</strong> to be included, and specify the <strong>jackpot </strong>that will be distributed among <strong>various prizes</strong>, all of which can be tailored to your preferences.</p> <p style="padding: 15px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif; word-spacing: 3px;">Key details to input include the <strong>start date,</strong> the <strong>end date,</strong> the <strong>total jackpot,</strong> the number of participants in the rankings, as well as the minimum wagering requirement for tournament entry.</p> <p style="font-weight: 300; padding: 15px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif; line-height: 1.8;">Moreover, you'll always have access to a real-time leaderboard displaying usernames, player positions, and corresponding prizes. This feature can significantly enhance the user experience on your casino platform, attracting more players and increasing revenue.</p> </div> <div class="index5-right-img"> <img src="assets/vrnl.webp" alt="Casino Tournaments" width="589" height="389"> </div> </div></section><app-footers2></app-footers2>
+<app-header2></app-header2>
+<section class="container13">
+    <div class="index5-maindiv">
+        <div class="index5-left-text">
+            <h1 class="param_1">The <b class="chck">Casino Tournaments</b> allow you to create a tournament with a
+                starting and ending date.</h1>
+            <p style="font-weight: 300; padding: 24px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif;">A
+                powerful tool at your disposal for boosting casino section revenues is the implementation of
+                <strong>Casino Tournaments.</strong></p>
+            <h2
+                style="font-weight: 200; padding: 15px 0px; color: rgb(87,87,86); font-size: 24px; font-family: 'Raleway', sans-serif;">
+                You'll have the ability to fully <strong>customize each tournament</strong> by handpicking the list of
+                slots that will participate in the competition.</h2>
+            <p
+                style="font-weight: 300; padding: 15px 0px; color: rgb(87,87,86); letter-spacing: 0em; line-height: 1.8;">
+                 <strong>Creating a promotion is quick and flexible. <br>
+Simply:</strong> </p>
+<div>
+<ul>
+    <li>Name your tournament – choose a compelling title.</li>
+
+<li>Select the game slots to be included.</li>
+
+<li>Set the jackpot – decide how it will be split among different prizes.</li>
+</ul>
+</div>
+
+
+ <p
+                style="font-weight: 300; padding: 15px 0px; color: rgb(87,87,86); letter-spacing: 0em; line-height: 1.8;">
+                 <strong>You can fully customize:
+</strong> </p>
+<div>
+<ul>
+    <li>Start and end dates</li>
+
+<li>Total jackpot amount</li>
+
+<li>Number of ranking positions</li>
+<li>Minimum wagering requirement for entry</li>
+</ul>
+</div>
+
+            <p
+                style="font-weight: 300; padding: 15px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif; line-height: 1.8;">
+                Moreover, you'll always have access to a real-time leaderboard displaying usernames, player positions,
+                and corresponding prizes. This feature can significantly enhance the user experience on your casino
+                platform, attracting more players and increasing revenue.</p>
+        </div>
+        <div class="index5-right-img"> <img src="assets/vrnl.webp" alt="Casino Tournaments" width="589" height="389">
+        </div>
+    </div>
+</section><app-footers2></app-footers2>
