--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -15,7 +15,7 @@
                     class="fontcolor">https://cx.vrnlexch.com</a></p>
         </div>
         <div class="white_casino_col_1 ">
-            <div class="white_casino_v"> <img src="assets/look-girl-art-hall-wallpaper-preview.jpg"
+            <div class="white_casino_v"> <img src="assets/look-girl-art-hall-wallpaper-preview.webp"
                     class="casino-img tv_image" loading="lazy" alt="Online Casino platform"> </div>
         </div>
     </div>
