--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -210,7 +210,7 @@
                 <h2 class=start_header>Before you begin, explore it in action!</h2>
                 <p class=start_para>on our demo platform:</p><a href="https://cxwelcome.live/#/" target=_blank
                     style=color:#a0c528>
-                    <p class=start_a> https://cxwelcome.live/#/ </p>
+                    <p class=start_a> https://cxwelcome.live</p>
                 </a>
             </div>
         </div>
