--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -248,7 +248,7 @@
           <div>
             <strong>b. Transactional or Billing Information</strong><br>
             Based on Your purchase of a subscription package, our payment gateway partner may collect information with
-            respect to your credit/debit card details or other bank account details along with your billing address.
+            respect to your  <b>credit/debit card </b>  details or other bank account details along with your billing address.
             This information is stored by our payment gateway partner. For instance, the Services will be using third
             party payment gateway partners to process and facilitate the payment of your subscription fee to the
             Services for providing you access to the subscription. Please note that vrnl.net does not directly collect
@@ -467,7 +467,7 @@
       <br>
       <div>
         <strong>a. Data Access and Portability</strong><br>
-        The EU - General Data Protection Regulation) entitles you, as the data subject, to request copies of your
+        The EU - (General Data Protection Regulation) entitles you, as the data subject, to request copies of your
         personal information held by us. You may also be entitled to request copies of personal information that you
         have provided to us in a structured, commonly used, and machine-readable format and/or request us to transmit
         this information to another service provider (where technically feasible)
@@ -589,13 +589,13 @@
         <strong>a. Support</strong><br>
         If you require any information or clarification regarding the use of your personal information or this privacy
         policy or grievances with respect to use of your personal information, please email us at <a
-          href="mailto:GDPR@NW18.com" title="GDPR@NW18.com">vrnl@gmail.com</a>
+          href="mailto:vrnl.net.info@gmail.com" title="vrnl.net.info@gmail.com">vrnl@gmail.com</a>
       </div>
       <br>
 
       <div>
         <strong>b. Complaints</strong><br>
-        You can write to our data protection officer in case of any grievance or compliant. You have the right to
+        You can write to our data protection officer in case of any grievance or complaint. You have the right to
         complaint about the data processing activities carried out by vrnl.net before the competent data protection
         authorities. <br>
         If you have any queries, complaints regarding the collecting, processing, transfer of personal data/information
