--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -32,8 +32,8 @@
             <ul class="white_f_list">
                 <li> <strong class="black-color">The most extensive catalog of online casino games worldwide,</strong>
                     meticulously selected from the industry's top-rated providers </li>
-                <li> <strong class="black-color">Tools for Bonuses</strong> and Slot Profitability Optimization </li>
-                <li> <strong class="black-color">Campaign Builder</strong> and Management of Game Tournaments</li>
+                <li> <strong class="black-color">Tools for Bonuses</strong> and  <strong class="black-color">Slot Profitability Optimization </strong>  </li>
+                <li> <strong class="black-color">Campaign Builder</strong> and <strong class="black-color"> Management of Game Tournaments </strong></li>
                 <li>Can be <strong class="black-color">seamlessly integrated through API or iFrame technology.</strong>
                 </li>
             </ul>
