--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -47,7 +47,7 @@
                 <h1 class="bottom-marg letter-spacing font-weight">Customizations</h1>
                 <h2 class="sec-header">Be unique</h2>
                 <p> <b class="bold">VRNL specializes in custom white label betting platforms, casinos, betting, and
-                    </b>tailored solutions that enhance your brand's identity. </p>
+                    tailored solutions </b> that enhance your brand's identity. </p>
                 <p>Our team of experts ensures that every detail, from visually stunning interfaces to logo integration
                     and feature enhancements, aligns with your vision.</p>
                 <p> Embark on your journey into the realm of Vrnl, where your unique vision comes to life. </p>
@@ -76,8 +76,8 @@
             <div class="risk-para">
                 <h1>Zero Risk</h1>
                 <h2>Trading and risk management services</h2>
-                <p> We provide comprehensive trading and risk management services, along with expert guidance on odds
-                    management. Additionally, we offer a unique feature - winnings coverage. In practical terms, this
+                <p> We provide comprehensive trading and <b> risk management services </b>, along with expert guidance on <b> odds
+                    management </b>. Additionally, we offer a unique feature - winnings coverage. In practical terms, this
                     means that if your platform doesn't generate revenue, we step in and cover the payouts to your
                     players. We prioritize your peace of mind. </p>
             </div>
