--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -40,7 +40,7 @@
         </a>
       </div>
       <div>
-        <p class=comp_list><a routerLink="/contact" aria-label="Contact Us">{{'Contact Us'|translate}}</a></p>
+        <p class=comp_list><a routerLink="/contact" aria-label="Contact Us">{{'contact_us'|translate}}</a></p>
       </div>
     </div>
     <div class="company_about about_left">
