--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -34,7 +34,7 @@
                 </a><br><button class="button_slide slide_right" (click)=scrollToContact() routerLink="/contact"><i
                         class="fa-solid fa-phone"></i> {{'contact_us!'|translate}}</button>
             </div>
-            <div class=platform_col_22 appIntersectionObserver><img class=platform_img src="assets/sportsbetting2.webp"
+            <div class=platform_col_22 appIntersectionObserver><img class=platform_img src="assets/sportsbetting2.webp?v=8746583"
                     loading=lazy alt="Sport Betting Software">
                 <div class="platform_you_tube aside"><a href=# aria-label="youtube link"><video controls
                             controlsList=nodownload playsinline autoplay [muted]=true #videoPlayer class=video
