--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -51,7 +51,7 @@
                     <span class=white_change> {{'wls_turnkey_p1_span1'|translate}} </span>
                     {{'wls_turnkey_p1_span2'|translate}} <a href="/"><span class=white_change><a
                                 routerLink="/sports-betting-software"
-                                class=white_change>{{'custom_satisfaction'}}</a></span></a>.
+                                class=white_change>{{'custom_satisfaction'|translate}}</a></span></a>.
                 </p>
                 <p class=white_para>{{'wls_turnkey_p2'|translate}}
 
