--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -70,7 +70,11 @@
             <p>&nbsp;</p>
             <p style="margin-bottom: 20px"> <i style="color: #686868;font-size: 17px;">"{{'about-section1-para2'|translate}}" </i> </p>
             <p>&nbsp;</p>
-            <p style="margin-bottom: 20px;font-size: 17px;color: #686868;" [innerHTML]="'about-section1-para3'|translate">  </p>
+            <p style="margin-bottom: 20px"> <i style="color: #686868;font-size: 17px;">"{{'about-section1-para21'|translate}}" </i> </p>
+            <p>&nbsp;</p>
+            <p style="margin-bottom: 20px"> <i style="color: #686868;font-size: 17px;">"{{'about-section1-para22'|translate}}" </i> </p>
+            <p>&nbsp;</p>
+            <p style="margin-bottom: 20px;font-size: 17px;color: #686868;" [innerHTML]="'about-section1-para3'|translate" >  </p>
             <p>&nbsp;</p>
         </div>
     </section>
